fix bug logo not showing in safari

--- a/index.css
+++ b/index.css
@@ -2,8 +2,9 @@
 	background: url('image/logo.svg') no-repeat center center;
 	background-size: contain;
 	/* width: 463px; */
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
+	flex: 1;
 	display: block;
 	/* background-color: red; */
 }
@@ -11,7 +12,7 @@
 	background: #E88E85;
 	color: #fff;
 	width: 105px;
-	height: 144px;
+	height: 140px;
 	font-size: 13px;
 	font-weight: bold;
 	display: inline-block;
@@ -22,7 +23,7 @@
 }
 .join-btn span {
 	margin-top: auto;
-	margin-bottom: 10px;
+	margin-bottom: 25px;
 	width: 60px;
 	text-align: center;
 	/* height: 10px; */
@@ -40,7 +41,7 @@
 }
 nav .login-btn span{
 	margin-top: auto;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 nav .menu-btn {
 	background: #fff;
@@ -181,7 +182,6 @@ nav .menu-text{
 .mw {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 }
 .pin {
 	margin-top:auto;
@@ -377,6 +377,13 @@ nav .menu-text{
 	color: #6D6E6D;
 	font-size: 12px;
 	margin-right: 16px;
+}
+.logo-wrapper {
+	flex: 1;
+	/* background: blue; */
+}
+.df {
+	display: flex;
 }
 @media (min-width: 1280px) {
   .container {
